Auth decorator terminado

--- a/04-teslo-shop/.env.template
+++ b/04-teslo-shop/.env.template
@@ -1,4 +1,4 @@
-POSTGRES_PASSWORD=
+POSTGRES_PASSWORD=helloworld
 POSTGRES_DB=TesloDB
 POSTGRES_USER=postgres
 DB_HOST=localhost
@@ -6,3 +6,7 @@ DB_PORT=5432
 
 PORT=3000
 HOST_API=http://localhost:3000/api
+
+SALT_ROUNDS=10
+
+JWT_SECRET=Est33sM1Se3edS3cr3t0H0H0H0
